--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -79,6 +79,7 @@ A nice side effect is the removal of, potential but often unrealistic, branches;
 	<li><a href="https://scan.coverity.com/projects/earcam-io-earcam-unexceptional"><img alt="Coverity Scan Build Status" src="https://scan.coverity.com/projects/13461/badge.svg"/></a></li>
 	-->
 	<li><a class="externalLink" href="https://sonarcloud.io/dashboard?id=io.earcam%3Aio.earcam.unexceptional" title="SonarQube Quality Gate"><img src="https://sonarcloud.io/api/badges/gate?key=io.earcam%3Aio.earcam.unexceptional" alt="Sonar Quality Gate" /></a></li>
+	<li><a class="externalLink" href='https://coveralls.io/github/earcam/io.earcam.unexceptional?branch=master'><img src='https://coveralls.io/repos/github/earcam/io.earcam.unexceptional/badge.svg?branch=master' alt='Coverage Status' /></a></li>
 	<li><a class="externalLink" href="https://codecov.io/github/earcam/io.earcam.unexceptional?branch=master" title="CodeCov"><img src="https://codecov.io/github/earcam/io.earcam.unexceptional/coverage.svg?branch=master" alt="CodeCov" /></a></li>
 	<!-- not longer available
 	<li><a href='https://www.versioneye.com/user/projects/5990a8020fb24f159f26043b'><img src='https://www.versioneye.com/user/projects/5990a8020fb24f159f26043b/badge.svg?style=flat-rounded' alt="Dependency Status" /></a></li>
