--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -16,6 +16,7 @@
 
 
 *##set( $coordinate = $context.get( 'coordinate.username.project' ) )#*
+*##set( $sonarCoordinate = "io.earcam%3A" + $context.get( 'earcam.project.root.artifactId' ) )#*
 
 *##set( $indexHeadFile = "$project.basedir/src/site/section/index-head.md.vm" )#*
 *##set( $indexFootFile = "$project.basedir/src/site/section/index-foot.md.vm" )#*
@@ -95,7 +96,7 @@
 <ul class="nav nav-list">
 	<li class="nav-header">Resource</li>
 	<li><a class="externalLink" href="https://maven-badges.herokuapp.com/maven-central/${project.groupId}/${project.artifactId}" title="Maven Central"><img src="https://maven-badges.herokuapp.com/maven-central/${project.groupId}/${project.artifactId}/badge.svg" alt="Maven Central" /></a></li>
-	<li><a class="externalLink" href="https://repository.sonatype.org/#nexus-search;gav~${project.groupId}~${project.artifactId}" title="Sonatype OSS Snapshot"><img src="https://img.shields.io/nexus/s/https/oss.sonatype.org/${coordinate}.svg" alt="Maven Snapshot" /></a></li>
+	<li><a class="externalLink" href="https://repository.sonatype.org/#nexus-search;gav~${project.groupId}~${project.artifactId}" title="Sonatype OSS Snapshot"><img src="https://img.shields.io/nexus/s/https/oss.sonatype.org/${project.groupId}/${project.artifactId}.svg" alt="Maven Snapshot" /></a></li>
 #if( !$hasModules )##
 	<li><a class="externalLink" href="http://www.javadoc.io/doc/${project.groupId}/${project.artifactId}" title="JavaDoc"><img src="https://www.javadoc.io/badge/${project.groupId}/${project.artifactId}.svg?color=green" alt="JavaDoc" /></a></li>
 #else##
@@ -109,15 +110,12 @@
 	<li class="nav-header">Status</li>
 	<li><a class="externalLink" href="https://travis-ci.org/${coordinate}" title="Travis CI"><img src="https://travis-ci.org/${coordinate}.svg?branch=master" alt="Travis CI" /></a></li>
 	<li><a class="externalLink" href="https://bitbucket.org/${coordinate}" title="BitBucket Pipelines CI"><img src="https://bitbucket-badges.atlassian.io/badge/${coordinate}.svg" alt="BitBucket Pipelines CI" /></a></li>
-
-	<li><a class="externalLink" href="https://sonarcloud.io/dashboard?id=${project.groupId}%3A${project.artifactId}" title="SonarQube Quality Gate"><img src="https://sonarcloud.io/api/project_badges/measure?project=${project.groupId}%3A${project.artifactId}&amp;metric=alert_status" alt="Sonar Quality Gate" /></a></li>
-	<li><a class="externalLink" href="https://sonarcloud.io/dashboard?id=${project.groupId}%3A${project.artifactId}" title="SonarQube Reliability"><img src="https://sonarcloud.io/api/project_badges/measure?project=${project.groupId}%3A${project.artifactId}&amp;metric=reliability_rating" alt="Sonar Reliability Rating" /></a></li>
-	<li><a class="externalLink" href="https://sonarcloud.io/dashboard?id=${project.groupId}%3A${project.artifactId}" title="SonarQube Security"><img src="https://sonarcloud.io/api/project_badges/measure?project=${project.groupId}%3A${project.artifactId}&amp;metric=security_rating" alt="Sonar Security Rating" /></a></li>
-	<li><a class="externalLink" href="https://sonarcloud.io/dashboard?id=${project.groupId}%3A${project.artifactId}" title="SonarQube Maintainability"><img src="https://sonarcloud.io/api/project_badges/measure?project=${project.groupId}%3A${project.artifactId}&amp;metric=sqale_rating" alt="Sonar Maintainability Rating (Sqale)" /></a></li>
-
+	<li><a class="externalLink" href="https://sonarcloud.io/dashboard?id=${sonarCoordinate}" title="SonarQube Quality Gate"><img src="https://sonarcloud.io/api/project_badges/measure?project=${sonarCoordinate}&amp;metric=alert_status" alt="Sonar Quality Gate" /></a></li>
+	<li><a class="externalLink" href="https://sonarcloud.io/dashboard?id=${sonarCoordinate}" title="SonarQube Reliability"><img src="https://sonarcloud.io/api/project_badges/measure?project=${sonarCoordinate}&amp;metric=reliability_rating" alt="Sonar Reliability Rating" /></a></li>
+	<li><a class="externalLink" href="https://sonarcloud.io/dashboard?id=${sonarCoordinate}" title="SonarQube Security"><img src="https://sonarcloud.io/api/project_badges/measure?project=${sonarCoordinate}&amp;metric=security_rating" alt="Sonar Security Rating" /></a></li>
+	<li><a class="externalLink" href="https://sonarcloud.io/dashboard?id=${sonarCoordinate}" title="SonarQube Maintainability"><img src="https://sonarcloud.io/api/project_badges/measure?project=${sonarCoordinate}&amp;metric=sqale_rating" alt="Sonar Maintainability Rating (Sqale)" /></a></li>
 	<li><a href='https://coveralls.io/github/${coordinate}?branch=master'><img src='https://coveralls.io/repos/github/${coordinate}/badge.svg?branch=master' alt='Coverage Status' /></a></li>
 	<li><a class="externalLink" href="https://codecov.io/github/${coordinate}?branch=master" title="CodeCov"><img src="https://codecov.io/github/${coordinate}/coverage.svg?branch=master" alt="CodeCov" /></a></li>
-
 	<li><a href="https://bitbucket.org/${coordinate}/issues?status=open" title="Number of issues still open"><img src="https://img.shields.io/bitbucket/issues/${coordinate}.svg" alt="Number of issues still open"/></a></li>
 	<li><a href="https://bitbucket.org/${coordinate}/pull-requests/" title="Number of open pull requests"><img src="https://img.shields.io/bitbucket/pr/${coordinate}.svg" alt="Number of open pull requests"/></a></li>
 </ul>
