mvn site changes
Signed-off-by: Caspar MacRae <earcam@gmail.com>

--- a/src/site/markdown/examples.md.vm
+++ b/src/site/markdown/examples.md.vm
@@ -91,7 +91,7 @@ Given the contrived `parse` method from previous example, you can use <span clas
 
 ${h3} File List
 
-Examples of calling Files::list and Stream API.
+Contrived example of calling Files::list with Stream API.
 
 ----
 
