--- a/src/site/section/index-head.md.vm
+++ b/src/site/section/index-head.md.vm
@@ -45,17 +45,28 @@ A nice side effect is the removal of, potential but often unrealistic, branches;
 
 ${h3} Migration from versions 0.* to 1.*
 
-${h4} What changed and why
-A generic type parameter was added - this allows methods to declare specific subtypes of `Throwable`.  Such a change breaks semantic-versioning, and therefore a major version number bump was required.
-This change allowed support of cases where the consumer of a checked functional type demanded matching of specific exception type e.g. `AutoCloseable`'s `close()` method declares that it `throws Exception`.
+${h5} What changed
+A generic type parameter was added to the functional types for the Throwable on method declarations; so:
 
-${h4} What to change to upgrade
+		interface CheckedFunction<T, R> {
+			public abstract R apply(T t) throws Throwable;
+		}
+
+Has become:
+
+		interface CheckedFunction<T, R, E extends Throwable> {
+			public abstract R apply(T t) throws E;
+		}
+
+${h5} Why
+This allows users to declare specific subtypes of `Throwable`, and therefore supported cases where the consumer of a checked functional type demanded matching of specific exception type
+e.g. `AutoCloseable`'s `close()` method declares that it `throws Exception`.  Previously you could assign the `autocloseable::close` handle to a checked functional type, but not the other
+way round.
+
+${h5} Upgrade path
 For existing code, currently dependent on v0.y,z, the impact is nonexistent if the only use is `Exceptional` or `EmeticStream`.  Otherwise, where using the checked equivalents of `java.util.function.*`,
-then appending a type parameter of `<?>` is sufficient (this will set the new type parameter to the upper bound of `Throwable` which is equivalent to the unparameterised form of v0.y.z).  
-
-${h4} Supplemental / Side-note
-Please note: it was never the intention that clients of this library publicly expose a dependency on `io.earcam.unexceptional`, the functional interfaces were exposed purely to allow matching of
-lambdas/method-references for immediate use with `Exceptional` or `EmeticStream`.   
+then appending a wildcard type parameter of `<?>` is sufficient (this will set the new type parameter to the upper bound of `Throwable` which is equivalent to the unparameterised form of v0.y.z).  
+Deprecated methods (such as `Exceptional.closing(...)`) have been removed, their alternatives are documented in previous versions.
 
 
 <br/><br/><br/>
